# nkn-sdk-cpp

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  config.cpp  nkn_client_test.cpp  rpc.cpp  rpc_test.cpp  tunnel_example.cpp
client/: address.h  client.cpp  client.h  config.cpp  config.h  message.cpp  message.h  multiclient.cpp  multiclient.h
dtype/: crypto.h  uBigInt.h
example/: ed25519_demo.cpp  nkn_client_demo.cpp  rpc_demo.cpp  wallet_demo.cpp
include/: SFINAE.h  account.h  byteslice.h  channel.h  rpc.h  serialize.h  transaction.h  uBigInt.h  unique_ptr_backporting.h  wallet.h  walletData.h
include/crypto/: aes.h  aes_test.h  base58.h  crypto.h  ed25519.h  ed25519_test.cpp  hash.h  hash_test.cpp  hex.h  random.h  random_test.cpp  scrypt.h  scrypt_test.cpp  secretbox.h  sodium_random.h  xchacha20-poly1305.h  xchacha20-poly1305_test.cpp
json/: NKNCodec.cpp  NKNCodec.h
ncp/: config.cpp  config.h  connection.cpp  connection.h  error.h  session.cpp  session.h  util.h
ncp/pb/: packet.pb.cc  packet.pb.h
payloads/: gogo.pb.cc  gogo.pb.h  payloads.pb.cc  payloads.pb.h  payloads.proto
pb/: block.pb.cc  block.pb.h  clientmessage.pb.cc  clientmessage.pb.h  node.pb.cc  node.pb.h  nodemessage.pb.cc  nodemessage.pb.h  sigchain.pb.cc  sigchain.pb.h  transaction.pb.cc  transaction.pb.h
transaction/: sigchain.h  transaction.cpp  txBuilder.cpp
tuna/: client.cpp  client.h  config.cpp  config.h  error.h  interface.h  message.h  tcpconn.h
tuna/pb/: session.pb.cc  session.pb.h
wallet/: account.cpp  nanopay.cpp  nanopay_test.cpp  wallet.cpp  walletData.cpp
